--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>GT Annotation</title>
+  <title>Ground Truth Annotation</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div id="app">
     <div id="video-section">
       <video id="videoPlayer" controls>
-        <!-- Replace it with the real video link later -->
         <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
@@ -25,7 +24,7 @@
     </div>
 
     <div id="annotation-section">
-      <!-- Dynamic content appears here -->
+      <!-- Segment content appears here -->
     </div>
   </div>
 
