--- a/index.html
+++ b/index.html
@@ -2,31 +2,38 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Ground Truth Annotation</title>
+  <title>Annotation - Wellness Ground Truth</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div id="app">
-    <div id="video-section">
-      <video id="videoPlayer" controls>
-        <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-      </video>
+  <header>
+    <h1>Wellness Ground Truth Annotation</h1>
+  </header>
 
-      <div id="segmentControls">
-        <button id="prevSegment">⏮ Prev</button>
-        <button id="replaySegment">🔁 Replay</button>
-        <button id="nextSegment">⏭ Next</button>
-      </div>
-
-      <div id="progressBar">Segment 0 of 0 evaluated</div>
+  <div id="video-section">
+    <video id="videoPlayer" controls>
+      <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4" />
+      Your browser does not support video.
+    </video>
+    <div id="segmentControls">
+      <button id="prevSegment">⏮ Prev</button>
+      <button id="replaySegment">🔁 Replay</button>
+      <button id="nextSegment">⏭ Next</button>
     </div>
-
-    <div id="annotation-section">
-      <!-- Segment content appears here -->
-    </div>
+    <div id="progressBar">Segment 0 of 0</div>
   </div>
+
+  <main id="annotation-section">
+    <!-- Segment content appears here -->
+  </main>
+
+  <div class="submit-area">
+    <button id="submitResults">✅ Submit Evaluation</button>
+  </div>
+
+  <footer>
+    <img src="public/jibo_footer.png" alt="Jibo Robot" height="100" />
+  </footer>
 
   <script src="app.js"></script>
 </body>
