--- a/index.html
+++ b/index.html
@@ -23,12 +23,10 @@
     <div id="progressBar">Segment 0 of 0</div>
   </div>
 
-  <main id="annotation-section">
-    <!-- Segment content appears here -->
-  </main>
+  <main id="annotation-section"></main>
 
   <div class="submit-area">
-    <button id="submitResults">✅ Submit Evaluation</button>
+    <button id="submitResults" style="display: none;">✅ Submit Evaluation</button>
   </div>
 
   <footer>
