Restore final version of index and style with working footer and clean layout

--- a/index.html
+++ b/index.html
@@ -15,13 +15,11 @@
       <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4" />
       Your browser does not support video.
     </video>
-
     <div id="segmentControls">
       <button id="prevSegment">⏮ Prev</button>
       <button id="replaySegment">🔁 Replay</button>
       <button id="nextSegment">⏭ Next</button>
     </div>
-
     <div id="progressBar">Segment 0 of 0</div>
   </div>
 
@@ -32,7 +30,7 @@
   </div>
 
   <footer>
-    <img src="https://i.imgur.com/lRVzVPL.png" alt="Jibo Robot with Heart" height="100" />
+    <img src="public/jibo_footer.png" alt="Jibo Robot" height="100" />
   </footer>
 
   <script src="app.js"></script>
