--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
   <div class="login-container">
     <div class="login-box">
       <h2>🔐 Sign In to Annotate</h2>
-      <input type="text" id="nameInput" placeholder="Enter your name" />
+      <input type="text" id="nameInput" placeholder="Enter your full name" />
       <br />
       <button onclick="signIn()">Start Annotating</button>
     </div>
