--- a/src/login.html
+++ b/src/login.html
@@ -9,22 +9,11 @@
   <div class="login-container">
     <div class="login-box">
       <h2>🔐 Sign In to Annotate</h2>
-      <input type="text" id="nameInput" placeholder="Enter your full name" />
+      <input type="text" id="username" placeholder="Enter your full name" />
       <br />
-      <button onclick="signIn()">Start Annotating</button>
+      <button id="startBtn">Start Annotating</button>
     </div>
   </div>
-
-  <script>
-    function signIn() {
-      const name = document.getElementById("nameInput").value.trim();
-      if (name) {
-        localStorage.setItem("annotatorName", name);
-        window.location.href = "index.html";
-      } else {
-        alert("Please enter your full name to proceed.");
-      }
-    }
-  </script>
+  <script src="login.js"></script>
 </body>
 </html>
