--- a/src/thankyou.html
+++ b/src/thankyou.html
@@ -8,7 +8,8 @@
 <body>
   <div class="thankyou-wrapper">
     <div class="thankyou-box">🎉 Thank You!</div>
-    <a href="login.html" class="button-link">🔁 Annotate Again</a>
+    <button id="back-main-btn" class="back-main-btn">Back to Main Page</button>
   </div>
+  <script src="app.js"></script>
 </body>
 </html>
